--- a/GPT_explore.ipynb
+++ b/GPT_explore.ipynb
@@ -28,8 +28,7 @@
    "source": [
     "import pandas as pd\n",
     "import ast\n",
-    "import matplotlib.pyplot as plt\n",
-    "import ipywidgets"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
